src>jpg изменение . фото

--- a/index.html
+++ b/index.html
@@ -51,27 +51,27 @@
     <section class="section3">      <!--ABOUT US-->
         <h2 class="aboutus-title">Чем мы занимаемся</h2>
         <ul>
-        <li><a href="" class="img"><img src="./images/about1.svg" alt="About us 1"  width="370"></a></li>
-        <li><a href="" class="img"><img src="./images/about2.svg" alt="About us 2" width="370"></a></li>
-        <li><a href="" class="img"><img src="./images/about3.svg" alt="About us 3" width="370"></a></li>
+        <li><a href="" class="img"><img src="./images/about1.jpg" alt="About us 1"  width="370"></a></li>
+        <li><a href="" class="img"><img src="./images/about2.jpg" alt="About us 2" width="370"></a></li>
+        <li><a href="" class="img"><img src="./images/about3.jpg" alt="About us 3" width="370"></a></li>
        </ul>
     </section>
     <section class="ourteam">      <!--OUR TEAM-->
         <h2  class="aboutus-title">Наша команда</h2>
         <ul>
-        <li><img src="./images/ourteam1.svg" alt="Igor photo" width="270">
+        <li><img src="./images/ourteam1.jpg" alt="Igor photo" width="270">
         <h3  class="section-title">Игорь Демьяненко</h3>
         <p>Product designer</p>
         </li>
-        <li> <img src="./images/ourteam2.svg" alt="Olga photo" width="270">
+        <li> <img src="./images/ourteam2.jpg" alt="Olga photo" width="270">
           <h3  class="section-title">Ольга Репина</h3>
            <p>Frontend Developer</p>
           </li>
-          <li> <img src="./images/ourteam3.svg" alt="Nikolay photo" width="270">            
+          <li> <img src="./images/ourteam3.jpg" alt="Nikolay photo" width="270">            
            <h3  class="section-title">Николай Тарасов</h3>
            <p>Marketing</p>
           </li>
-          <li> <img src="./images/ourteam4.svg" alt="Mikhayl photo" width="270">
+          <li> <img src="./images/ourteam4.jpg" alt="Mikhayl photo" width="270">
            <h3  class="section-title">Михаил Ермаков</h3>
            <p>UI Designer</p>
           </li>
