Коррекция комментов для логической правильно цепочки

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
         <button class="button">Заказать услугу</button>
         </section>
-        <section class="section2">                  <!--SECTION 2-->
-        <ul class="section2-list">
+        <section class="advantages">                  <!--ADVANTAGES-->
+        <ul class="advantages-list">
         <li>
             <h2 class="section-title">Внимание к деталям</h2>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
