ДЗ №3 flex готов index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                                      <!--HEADER-->
   <header>
  <div class="container header-nav">
-<nav>
+<nav class="header-nav">
 <a href="./index.html" class="logo"><span class="logoblue">Web</span>Studio</a> 
          <ul class="site-nav">
             <li class="nav-item"><a href="" class="current">Студия</a></li>
@@ -22,7 +22,7 @@
         </nav>    
         <ul class="auth-nav">
             <li class="item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
-            <li class="item"><a href="tel:+380961111111">+380961111111</a></li> 
+            <li class="item"><a href="tel:+380961111111">+38 096 111 11 11</a></li> 
         </ul>
   </div>   
     </header>
@@ -36,7 +36,7 @@
         </section>
                                      <!--ADVANTAGES-->
         <section class="advantages">  
-         <div class="container">                     
+         <div class="container advant-items">                     
         <ul class="advantages-list">
       <li class="features">
             <h2 class="section-title">Внимание к деталям</h2>
@@ -58,13 +58,13 @@
      </div>  
     </section>
                                        <!--ABOUT US-->
-    <section class="section3">   
+    <section class="aboutus">   
          <div class="container">    
         <h2 class="aboutus-title">Чем мы занимаемся</h2>
-        <ul>
-        <li><a href="" class="img"><img src="./images/about1.jpg" alt="About us 1"  width="370"></a></li>
-        <li><a href="" class="img"><img src="./images/about2.jpg" alt="About us 2" width="370"></a></li>
-        <li><a href="" class="img"><img src="./images/about3.jpg" alt="About us 3" width="370"></a></li>
+        <ul class="aboutus-items">
+        <li class="aboutus-item"><a href="" class="img"><img src="./images/about1.jpg" alt="About us 1"  width="370"></a></li>
+        <li class="aboutus-item"><a href="" class="img"><img src="./images/about2.jpg" alt="About us 2" width="370"></a></li>
+        <li class="aboutus-item"><a href="" class="img"><img src="./images/about3.jpg" alt="About us 3" width="370"></a></li>
        </ul>
        </div>
     </section>
@@ -102,7 +102,7 @@
              </address>
              <address class="footer-nav">
             <a class="footer-address" href="mailto:info@example.com">info@example.com</a> <br>
-            <a href="tel:+380991111111">(380) 991-11-11-11</a>     
+            <a href="tel:+380991111111">+38 099 111 11 11</a>     
             </address>
             </div> 
             </footer>
