--- a/portfolio.html
+++ b/portfolio.html
@@ -9,27 +9,27 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>                 
 <body class="page">
-                        <!--HEADER-->   
-      <header>
-     <div class="container">
-     <nav>
-     <a href="./index.html" class="logo"><span class="logoblue">Web</span>Studio</a>
+                             <!--HEADER-->
+  <header>
+ <div class="container header-nav">
+<nav class="header-nav">
+<a href="./index.html" class="logo"><span class="logoblue">Web</span>Studio</a> 
          <ul class="site-nav">
-            <li><a href="./index.html" class="current">Студия</a></li>
-            <li><a href="">Портфолио</a></li>
-            <li><a href="">Контакты</a></li>
+            <li class="nav-item"><a href="./index.html" class="current">Студия</a></li>
+            <li class="nav-item"><a href="">Портфолио</a></li>
+            <li class="nav-item"><a href="">Контакты</a></li>
         </ul>  
         </nav>    
         <ul class="auth-nav">
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
-            <li><a href="tel:+380961111111">+380961111111</a></li> 
+            <li class="item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
+            <li class="item"><a href="tel:+380961111111">+38 096 111 11 11</a></li> 
         </ul>
   </div>   
     </header>
                          <!--MAIN-->  
     <main class="main-cont">
         <div class="container">         
-    <ul>
+    <ul class="buttons-portfolio">
         <li><button class="button-portfolio">Все</button></li>
         <li><button class="button-portfolio">Веб-сайты</button></li>
         <li><button class="button-portfolio">Приложения</button></li>
@@ -37,41 +37,41 @@
         <li><button class="button-portfolio">Маркетинг</button></li>
         </ul>
         <ul class="portfolio">
-        <li><a href=""><img src="./images/portfolio1.jpg" alt="Tehnokryak" width="370">
-        <h2  class="section-title portfolio-title">Технокряк</h2>
-        <p>Вебсайт</p>
+        <li class="flext-item"><a href=""><img src="./images/portfolio1.jpg" alt="Tehnokryak" width="370">
+        <h2  class="portfolio-title">Технокряк</h2>
+        <p class="portfolio-whatis">Вебсайт</p>
         </a></li>
-        <li><a href=""><img src="./images/portfolio2.jpg" alt="Basketball" width="370">
-        <h2  class="section-title portfolio-title">Постер New Orlean vs Golden Star</h2>
-        <p>Дизайн</p>
+        <li class="flext-item"><a href=""><img src="./images/portfolio2.jpg" alt="Basketball" width="370">
+        <h2  class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+        <p class="portfolio-whatis">Дизайн</p>
         </a></li> 
-        <li><a href=""><img src="./images/portfolio3.jpg" alt="Ресторан Seafood" width="370">
-        <h2  class="section-title portfolio-title">Ресторан Seafood</h2>
-        <p>Приложение</p>
+        <li class="flext-item"><a href=""><img src="./images/portfolio3.jpg" alt="Ресторан Seafood" width="370">
+        <h2  class="portfolio-title">Ресторан Seafood</h2>
+        <p class="portfolio-whatis">Приложение</p>
         </a></li>
-        <li><a href=""><img src="./images/portfolio4.jpg" alt="Проект Prime" width="370">
-        <h2  class="section-title portfolio-title">Проект Prime</h2>
-        <p>Маркетинг</p>
+        <li class="flext-item"><a href=""><img src="./images/portfolio4.jpg" alt="Проект Prime" width="370">
+        <h2  class="portfolio-title">Проект Prime</h2>
+        <p class="portfolio-whatis">Маркетинг</p>
         </a></li>
-        <li><a href=""><img src="./images/portfolio5.jpg" alt="Проект Boxes" width="370">
-        <h2  class="section-title portfolio-title">Проект Boxes</h2>
-              <p>Приложение</p>
+        <li class="flext-item"><a href=""><img src="./images/portfolio5.jpg" alt="Проект Boxes" width="370">
+        <h2  class="portfolio-title">Проект Boxes</h2>
+              <p class="portfolio-whatis">Приложение</p>
             </a></li>
-              <li><a href=""><img src="./images/portfolio6.jpg" alt="Inspiration has no Borders" width="370">
-               <h2  class="section-title portfolio-title">Inspiration has no Borders</h2>
-                <p>Веб-сайт</p>
+              <li class="flext-item"><a href=""><img src="./images/portfolio6.jpg" alt="Inspiration has no Borders" width="370">
+               <h2  class="portfolio-title">Inspiration has no Borders</h2>
+                <p class="portfolio-whatis">Веб-сайт</p>
             </a></li>
-                <li><a href=""><img src="./images/portfolio7.jpg" alt="Издание Limited Edition" width="370">
-                <h2  class="section-title portfolio-title">Издание Limited Edition</h2>
-                 <p>Дизайн</p>
+                <li class="flext-item"><a href=""><img src="./images/portfolio7.jpg" alt="Издание Limited Edition" width="370">
+                <h2  class="portfolio-title">Издание Limited Edition</h2>
+                 <p class="portfolio-whatis">Дизайн</p>
                 </a> </li>
-                 <li><a href=""><img src="./images/portfolio8.jpg" alt="Проект LAB" width="370">
-                 <h2  class="section-title portfolio-title">Проект LAB</h2>
-                 <p>Маркетинг</p>
+                 <li class="flext-item"><a href=""><img src="./images/portfolio8.jpg" alt="Проект LAB" width="370">
+                 <h2  class="portfolio-title">Проект LAB</h2>
+                 <p class="portfolio-whatis">Маркетинг</p>
                 </a></li>
-                  <li><a href=""><img src="./images/portfolio9.jpg" alt="Growing Business" width="370">
-                  <h2  class="section-title portfolio-title">Growing Business</h2>
-                  <p>Приложение</p>
+                  <li class="flext-item"><a href=""><img src="./images/portfolio9.jpg" alt="Growing Business" width="370">
+                  <h2  class="portfolio-title">Growing Business</h2>
+                  <p class="portfolio-whatis">Приложение</p>
                   </a></li>                   
                       </ul>
                   <a href=""></a>
@@ -86,7 +86,7 @@
              </address>
              <address class="footer-nav">
             <a class="footer-address" href="mailto:info@example.com">info@example.com</a> <br>
-            <a href="tel:+380991111111">(380) 991-11-11-11</a>     
+            <a href="tel:+380991111111">+38 099 111 11 11</a>     
             </address>
             </div> 
             </footer>
