--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Document</title>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
 <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -101,8 +101,8 @@
             г. Киев, пр-т Леси Украинки, 26
              </address>
              <address class="footer-nav">
-            <a class="footer-address" href="mailto:info@example.com">info@example.com</a> <br>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>     
+            <a class="footer-address" href="mailto:info@example.com">info@example.com</a>
+            <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>     
             </address>
             </div> 
             </footer>
