--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 </head>                 
 <body class="page">
                              <!--HEADER-->
-  <header>
+  <header class="portfolio-header">
  <div class="container header-nav">
 <nav class="header-nav">
 <a href="./index.html" class="logo"><span class="logoblue">Web</span>Studio</a> 
@@ -27,8 +27,8 @@
   </div>   
     </header>
                          <!--MAIN-->  
-    <main class="main-cont">
-        <div class="container">         
+    <main>
+        <div class="container main-cont">         
     <ul class="buttons-portfolio">
         <li><button class="button-portfolio">Все</button></li>
         <li><button class="button-portfolio">Веб-сайты</button></li>
@@ -38,40 +38,58 @@
         </ul>
         <ul class="portfolio">
         <li class="flext-item"><a href=""><img src="./images/portfolio1.jpg" alt="Tehnokryak" width="370">
+        <div class="portfolio-block">
         <h2  class="portfolio-title">Технокряк</h2>
         <p class="portfolio-whatis">Вебсайт</p>
+        </div>
         </a></li>
         <li class="flext-item"><a href=""><img src="./images/portfolio2.jpg" alt="Basketball" width="370">
+        <div class="portfolio-block">
         <h2  class="portfolio-title">Постер New Orlean vs Golden Star</h2>
         <p class="portfolio-whatis">Дизайн</p>
+        </div>
         </a></li> 
         <li class="flext-item"><a href=""><img src="./images/portfolio3.jpg" alt="Ресторан Seafood" width="370">
+        <div class="portfolio-block">
         <h2  class="portfolio-title">Ресторан Seafood</h2>
         <p class="portfolio-whatis">Приложение</p>
+        </div>
         </a></li>
         <li class="flext-item"><a href=""><img src="./images/portfolio4.jpg" alt="Проект Prime" width="370">
+        <div class="portfolio-block">
         <h2  class="portfolio-title">Проект Prime</h2>
         <p class="portfolio-whatis">Маркетинг</p>
+        </div>
         </a></li>
         <li class="flext-item"><a href=""><img src="./images/portfolio5.jpg" alt="Проект Boxes" width="370">
+        <div class="portfolio-block">
         <h2  class="portfolio-title">Проект Boxes</h2>
               <p class="portfolio-whatis">Приложение</p>
+         </div> 
             </a></li>
               <li class="flext-item"><a href=""><img src="./images/portfolio6.jpg" alt="Inspiration has no Borders" width="370">
+        <div class="portfolio-block">
                <h2  class="portfolio-title">Inspiration has no Borders</h2>
                 <p class="portfolio-whatis">Веб-сайт</p>
+          </div>
             </a></li>
                 <li class="flext-item"><a href=""><img src="./images/portfolio7.jpg" alt="Издание Limited Edition" width="370">
+        <div class="portfolio-block">
                 <h2  class="portfolio-title">Издание Limited Edition</h2>
                  <p class="portfolio-whatis">Дизайн</p>
+               </div>
                 </a> </li>
                  <li class="flext-item"><a href=""><img src="./images/portfolio8.jpg" alt="Проект LAB" width="370">
+        <div class="portfolio-block">
                  <h2  class="portfolio-title">Проект LAB</h2>
                  <p class="portfolio-whatis">Маркетинг</p>
+                </div>
                 </a></li>
                   <li class="flext-item"><a href=""><img src="./images/portfolio9.jpg" alt="Growing Business" width="370">
+        <div class="portfolio-block">
                   <h2  class="portfolio-title">Growing Business</h2>
                   <p class="portfolio-whatis">Приложение</p>
+                  </div>
                   </a></li>                   
                       </ul>
                   <a href=""></a>
