Корректировка ДЗ №3 2 раз

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,7 @@
     </header>
                          <!--MAIN-->  
     <main>
+        <section class="main-cont">
         <div class="container main-cont">         
     <ul class="buttons-portfolio">
         <li><button class="button-portfolio">Все</button></li>
@@ -94,6 +95,7 @@
                       </ul>
                   <a href=""></a>
                    </div> 
+                   </section>
         </main>
                                    <!--FOOTER-->
         <footer class="footer"> 
