--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
                          <!--MAIN-->  
     <main>
         <section class="main-cont">
-        <div class="container main-cont">         
+        <div class="container">         
     <ul class="buttons-portfolio">
         <li><button class="button-portfolio">Все</button></li>
         <li><button class="button-portfolio">Веб-сайты</button></li>
