--- a/index.html
+++ b/index.html
@@ -21,15 +21,28 @@
         </ul>  
         </nav>    
         <ul class="auth-nav">
-            <li class="item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
-            <li class="item"><a href="tel:+380961111111">+38 096 111 11 11</a></li> 
+            <li class="item"> 
+              <a href="mailto:info@devstudio.com">
+               <div class="prov"> <svg class="icon-email">
+                <use href="./images/symbol-defs.svg#icon-email"> </use>
+              </svg> </div>
+               info@devstudio.com
+              </a></li> 
+            <li class="item"><a href="tel:+380961111111">
+               <div class="prov">
+                 <svg class="icon-tel">
+                <use href="./images/symbol-defs.svg#icon-tel"> </use>
+              </svg></div>
+              +38 096 111 11 11
+            </a></li> 
         </ul>
   </div>   
     </header>
     <main>
                                      <!--HERO-->
         <section class="hero">   
-          <div class="container center">      
+          <div class="container center">  
+            <div class="heroimg">    
         <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
         <button class="button">Заказать услугу</button>
          </div>   
@@ -38,23 +51,24 @@
         <section class="advantages">  
          <div class="container advant-items">                     
         <ul class="advantages-list">
-      <li class="features">
-            <h2 class="section-title">Внимание к деталям</h2>
+      <li class="features icon-antenna">
+            <h2 class="section-title adv-title">Внимание к деталям</h2>
             <p class="adv-item">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
        </li>
-     <li class="features">
-        <h2 class="section-title">Пунктуальность</h2>
+     <li class="features icon-clock">
+        <h2 class="section-title adv-title">Пунктуальность</h2>
         <p class="adv-item">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
     </li>
-    <li class="features">
-        <h2 class="section-title">Планирование</h2>
+    <li class="features icon-diagram">
+        <h2 class="section-title adv-title">Планирование</h2>
         <p class="adv-item">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
     </li>
-    <li class="features">
-        <h2 class="section-title">Современные технологии</h2>
+    <li class="features icon-astronaut">
+        <h2 class="section-title adv-title">Современные технологии</h2>
         <p class="adv-item">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
     </li>
      </ul>
+     </div>
      </div>  
     </section>
                                        <!--ABOUT US-->
@@ -105,8 +119,9 @@
             <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>     
             </address>
             </div> 
-            </footer>
+            </footer>         
      </body>
 </html>
+
 
 
