--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <ul class="auth-nav">
             <li class="item"> 
               <a href="mailto:info@devstudio.com">
-               <div class="prov"> <svg class="icon-email">
+               <div class="icon-block"> <svg class="icon-email">
                 <use href="./images/symbol-defs.svg#icon-email"> </use>
               </svg> </div>
                info@devstudio.com
               </a></li> 
             <li class="item"><a href="tel:+380961111111">
-               <div class="prov">
+               <div class="icon-block">
                  <svg class="icon-tel">
                 <use href="./images/symbol-defs.svg#icon-tel"> </use>
               </svg></div>
