--- a/index.html
+++ b/index.html
@@ -90,6 +90,24 @@
         <li class="cards"><img src="./images/ourteam1.jpg" alt="Igor photo" width="270">
         <h3  class="section-title">Игорь Демьяненко</h3>
         <p class="ourteam-who">Product designer</p>
+        <ul class="social-links">
+                    <li>     <a class="icon-link" href="https://instagram.com/">
+              <svg class="icon-social instagram">
+                <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+              </svg> </a> </li> 
+                         <li>  <a class="icon-link" href="https://instagram.com/">
+              <svg class="icon-social twitter">
+                <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+              </svg> </a> </li> 
+                         <li>  <a class="icon-link" href="https://instagram.com/">
+              <svg class="icon-social facebook">
+                <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+              </svg> </a> </li> 
+                         <li>   <a class="icon-link" href="https://instagram.com/">
+              <svg class="icon-social linkedin">
+                <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+              </svg> </a> </li> 
+              </ul>
         </li>
         <li class="cards"> <img src="./images/ourteam2.jpg" alt="Olga photo" width="270">
           <h3  class="section-title">Ольга Репина</h3>
@@ -97,11 +115,11 @@
           </li>
           <li class="cards"> <img src="./images/ourteam3.jpg" alt="Nikolay photo" width="270">            
            <h3  class="section-title">Николай Тарасов</h3>
-           <p class="ourteam-who">Marketing</p>
+           <p class="ourteam-who">Marketing</p>         
           </li>
           <li class="cards"> <img src="./images/ourteam4.jpg" alt="Mikhayl photo" width="270">
            <h3  class="section-title">Михаил Ермаков</h3>
-           <p class="ourteam-who">UI Designer</p>
+           <p class="ourteam-who">UI Designer</p>           
           </li>
         </ul>
         </div>
