--- a/index.html
+++ b/index.html
@@ -92,19 +92,19 @@
         <p class="ourteam-who">Product designer</p>
         <ul class="social-links">
                     <li>     <a class="icon-link" href="https://instagram.com/">
-              <svg class="icon-social instagram">
+              <svg class="icon-social">
                 <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
               </svg> </a> </li> 
                          <li>  <a class="icon-link" href="https://instagram.com/">
-              <svg class="icon-social twitter">
+              <svg class="icon-social">
                 <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
               </svg> </a> </li> 
                          <li>  <a class="icon-link" href="https://instagram.com/">
-              <svg class="icon-social facebook">
+              <svg class="icon-social">
                 <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
               </svg> </a> </li> 
                          <li>   <a class="icon-link" href="https://instagram.com/">
-              <svg class="icon-social linkedin">
+              <svg class="icon-social">
                 <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
               </svg> </a> </li> 
               </ul>
