--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <h3  class="section-title">Игорь Демьяненко</h3>
         <p class="ourteam-who">Product designer</p>
         <ul class="social-links">
-                    <li>     <a class="icon-link" href="https://instagram.com/">
+                    <li>     <a class="icon-link insta" href="https://instagram.com/">
               <svg class="icon-social">
                 <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
               </svg> </a> </li> 
@@ -137,7 +137,7 @@
             <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>     
             </address>
             </div> 
-            </footer>         
+            </footer>                   
      </body>
 </html>
 
