--- a/portfolio.html
+++ b/portfolio.html
@@ -9,20 +9,32 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>                 
 <body class="page">
-                             <!--HEADER-->
-  <header class="portfolio-header">
+                                                      <!--HEADER-->
+  <header>
  <div class="container header-nav">
 <nav class="header-nav">
 <a href="./index.html" class="logo"><span class="logoblue">Web</span>Studio</a> 
          <ul class="site-nav">
-            <li class="nav-item"><a href="./index.html" class="current">Студия</a></li>
-            <li class="nav-item"><a href="">Портфолио</a></li>
+            <li class="nav-item"><a href="" class="current">Студия</a></li>
+            <li class="nav-item"><a href="./portfolio.html">Портфолио</a></li>
             <li class="nav-item"><a href="">Контакты</a></li>
         </ul>  
         </nav>    
         <ul class="auth-nav">
-            <li class="item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
-            <li class="item"><a href="tel:+380961111111">+38 096 111 11 11</a></li> 
+            <li class="item"> 
+              <a href="mailto:info@devstudio.com">
+               <div class="icon-block"> <svg class="icon-email">
+                <use href="./images/symbol-defs.svg#icon-email"> </use>
+              </svg> </div>
+               info@devstudio.com
+              </a></li> 
+            <li class="item"><a href="tel:+380961111111">
+               <div class="icon-block">
+                 <svg class="icon-tel">
+                <use href="./images/symbol-defs.svg#icon-tel"> </use>
+              </svg></div>
+              +38 096 111 11 11
+            </a></li> 
         </ul>
   </div>   
     </header>
@@ -97,19 +109,42 @@
                    </div> 
                    </section>
         </main>
-                                   <!--FOOTER-->
-        <footer class="footer"> 
-            <div class="container"> 
+                                         <!--FOOTER-->
+    <footer class="footer"> 
+            <div class="container footer-mainblock">     
+              <div class="footer-firstblock">  
         <a href="./index.html" class="logo-footer"><span class="logoblue">Web</span>Studio</a>
              <address class="street-footer">
             г. Киев, пр-т Леси Украинки, 26
              </address>
              <address class="footer-nav">
-            <a class="footer-address" href="mailto:info@example.com">info@example.com</a> <br>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>     
+            <a class="footer-address" href="mailto:info@example.com">info@example.com</a>
+            <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>     
             </address>
             </div> 
-            </footer>
+            <div class="footer-secondblock">
+              <p class="join-text">ПРИСОЕДИНЯЙТЕСЬ</p>
+           <ul class="footer-links">   
+               <li class="footer-links-item"> <a class="footer-link" href="https://instagram.com/">
+              <svg class="icon-footer">
+                <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+              </svg> </a> </li> 
+                         <li class="footer-links-item"> <a class="footer-link" href="https://instagram.com/">
+              <svg class="icon-footer">
+                <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+              </svg> </a> </li> 
+                         <li class="footer-links-item">  <a class="footer-link" href="https://instagram.com/">
+              <svg class="icon-footer">
+                <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+              </svg> </a> </li> 
+                         <li class="footer-links-item">   <a class="footer-link" href="https://instagram.com/">
+              <svg class="icon-footer">
+                <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+              </svg> </a> </li> 
+                 </ul>
+              </div>
+            </div> 
+            </footer>                   
      </body>
 </html>
              
